# Python_PDF_OCR

./: .gitignore  3.1.4  LICENSE  Pipfile  README.md  concatinator.py  ghostscript_test.py  image_to_pdf.py  index.css  index.html  merge_pdfs.py  ocr.py  ocr_image.py  pdf_page_to_image.py  pdf_splitter.py  pdf_to_image.py  project_notes.md  pyproject.toml  pyvenv.cfg  reader.py  requirements.txt  sample-index.css  sample_index.css  sample_index.html  setup.py  split_with_rl.py  splitter.py  subset.py
Scripts/: activate  activate.bat  activate.fish  activate.xsh
alterpdf/: concatinator.py  futz_aroiund.py  image_to_pdf.py  ocr_image.py  out_text.txt  pdf_splitter.py  pdf_to_image.py  pdf_to_text.py  pdf_to_txt.py  reader.py  split_and_combine.py  split_with_rl.py  splitter.py
sample_images/: .test_data_out.txt.txt  test_data.docx  test_data_out2.txt.txt
tests/: test_image_to_pdf.py  test_ocr.py  test_ocr_image_exists.py  test_pdf_to_image.py
