[tool.poetry]
name = "ocr_project"
version = "0.1.0"
description = ""
authors = ["JosephVC <josephvcardenas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pdfrw = "^0.4"
pdf2image = "^1.12.1"
img2pdf = "^0.3.3"
pillow = "^7.0.0"
opencv-python = "^4.2.0"
pytesseract = "^0.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
