[tool.poetry]
name = "ocr_project"
version = "0.1.0"
description = "A simple OCR project built using Python."
authors = ["JosephVC <josephvcardenas@gmail.com>"]
maintainers = ["JosephVC <josephvcardenas@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "http://www.github.com/JosephVC/OCR_project"
keywords = ["Python",
            "OCR",
            "Optical Character Recognition",
            "PDF"]

[tool.poetry.dependencies]
python = "^3.8"
pdfrw = "^0.4"
pdf2image = "^1.12.1"
img2pdf = "^0.3.3"
pillow = "^10.0.1"
opencv-python = "^4.2.0"
pytesseract = "^0.3.3"
bleach = "^3.1.4"
pytest = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
